# filecon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/filecon/: __init__.py  comment_pattern.py  filecon.py
tests/: test.py
tests/files/: 1.yaml  2.ts
tests/files/ex/: 1.js
tests/files/in/: 1.toml
tests/files_ok/: 2.ts
tests/files_ok/ex/: 1.js
