[project]
name = "filecon"
version = "0.1.0"
description = "A tool to concatenate files with metadata and delimiters."
authors = [{ name = "limc", email = "i@limc.me" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
filecon = "filecon.filecon:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest",
]
env = [
    "black",
]
